--- a/src/main/resources/templates/editorial-lista.html
+++ b/src/main/resources/templates/editorial-lista.html
@@ -18,16 +18,21 @@
             </thead>
             <tbody>
                 <tr th:each="edito, iterator : ${editoriales}">
+                   
+                    
                     <td th:text="${iterator.index+1}"> </td>
                     <td th:text="${edito.nombre}" </td>
                     <td th:text="${edito.alta}"> </td>
-            <a href="http://localhost:8080/cargar"> <button>Editar</button> </a>   
+                    
+                    <td> <a th:href="@{/editorial/cargar} + '?id=' + ${edito.id}"> <button>Editar</button> </a> </td>
                 </tr>
-                
+                 
             </tbody>
         </table>
-        <p th:if="${editoriales.isEmpty}" th:text=" 'No hay editoriales cargadas aún' "> </p>
-        
+        <p th:if="${editoriales == null}" th:text=" 'No hay editoriales cargadas aún' "> </p>
+         
+            <p th:text="${error}"> </p>
+            <p th:text="${sucess}"> </p>
     </body>
     <br>
     
